--- a/jc-cloud/pom.xml
+++ b/jc-cloud/pom.xml
@@ -9,10 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <modules>
+        <module>jc-web</module>
+    </modules>
+
 
     <groupId>com.jayce</groupId>
     <artifactId>jc-cloud</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <dependencies>
         <!--TODO 框架JSON处理工具 -->
@@ -26,6 +31,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>2.0.0.RELEASE</version>
         </dependency>
     </dependencies>
 
