--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,13 @@
     <artifactId>melab</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
                     <source>8</source>
                     <target>8</target>
@@ -20,9 +22,11 @@
             </plugin>
         </plugins>
     </build>
+
     <modules>
         <module>me-common</module>
         <module>jc-cloud</module>
+        <module>me-exercise</module>
     </modules>
 
     <dependencies>
