--- a/jc-cloud/pom.xml
+++ b/jc-cloud/pom.xml
@@ -12,14 +12,40 @@
 
     <modules>
         <module>jc-web</module>
-        <module>../jc-text</module>
+        <module>jc-text</module>
     </modules>
 
 
-    <groupId>com.jayce</groupId>
+    <!--<groupId>com.jayce</groupId>-->
     <artifactId>jc-cloud</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <!--TODO 框架JSON处理工具 -->
