--- a/jc-cloud/jc-text/pom.xml
+++ b/jc-cloud/jc-text/pom.xml
@@ -2,29 +2,34 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.example</groupId>
-    <artifactId>jc-text</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>jc-text</name>
-    <packaging>pom</packaging>
-    <description>Demo project for Spring Boot</description>
-
     <parent>
         <groupId>com.jayce</groupId>
         <artifactId>jc-cloud</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <groupId>com.example</groupId>
+    <artifactId>jc-text</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>jc-text</name>
+    <description>Demo project for Spring Boot</description>
+
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
