--- a/jc-cloud/jc-web/src/main/resources/application.yml
+++ b/jc-cloud/jc-web/src/main/resources/application.yml
@@ -6,22 +6,30 @@ server:
 
 spring:
   application:
-    name: yc-web
+    name: jc-web
   http:
     encoding:
       charset: UTF-8
       enabled: true
       force: true
+  cloud:
+    client:
+      ipAddress: 10.0.1.22
 #注册中心配置
 eureka:
   instance:
-    #    statusPageUrlPath: /actuator/info
-    #    healthCheckUrlPath: /actuator/health
-    #    home-page-url-path: /
-    #心跳
+    statusPageUrlPath: /actuator/info
+    healthCheckUrlPath: /actuator/health
+    home-page-url-path: /
+    #心跳,默认30s
     lease-renewal-interval-in-seconds: 1
-    #定义死亡
+    #定义死亡,默认90s
     lease-expiration-duration-in-seconds: 2
+    prefer-ip-address: true #以IP地址注册到服务中心
+    instance-id: ${spring.cloud.client.ipAddress}:${spring.application.name}:${server.port}
   client:
-    serviceUrl:
-      defaultZone: http://localhost:1111/eureka/
+    service-url:
+    #      defaultZone: http://120.26.50.186:6600/eureka/ #注册远程注册中心
+    defaultZone： http://localhost:1111/eureka/
+    healthcheck:
+      enabled: true
