--- a/jc-cloud/feign-server/feign-web/pom.xml
+++ b/jc-cloud/feign-server/feign-web/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.common</groupId>
-        <artifactId>feign-api</artifactId>
+        <artifactId>feign-server</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>com.jayce</groupId>
