--- a/jc-cloud/pom.xml
+++ b/jc-cloud/pom.xml
@@ -16,7 +16,7 @@
         <module>jc-text</module>
         <module>eureka-server</module>
         <module>ribbon-server</module>
-        <module>feign-api</module>
+        <module>feign-server</module>
     </modules>
 
 
