web - 持久化 tk 打通

--- a/jc-cloud/feign-server/feign-web/pom.xml
+++ b/jc-cloud/feign-server/feign-web/pom.xml
@@ -18,7 +18,11 @@
     </properties>
 
     <dependencies>
-
+        <!--TODO feign服务调用-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
