--- a/jc-cloud/jc-web/src/main/resources/application.yml
+++ b/jc-cloud/jc-web/src/main/resources/application.yml
@@ -3,8 +3,9 @@ server:
   port: 7700
   tomcat:
     uri-encoding: UTF-8
-
 spring:
+  profiles:
+    active: dev
   application:
     name: jc-web
   http:
@@ -12,9 +13,6 @@ spring:
       charset: UTF-8
       enabled: true
       force: true
-  cloud:
-    client:
-      ipAddress: 127.0.0.1
 #注册中心配置
 eureka:
   instance:
@@ -25,9 +23,7 @@ eureka:
     lease-renewal-interval-in-seconds: 1
     #定义死亡,默认90s
     lease-expiration-duration-in-seconds: 2
-    prefer-ip-address: true #以IP地址注册到服务中心
-    instance-id: ${spring.cloud.client.ipAddress}:${spring.application.name}:${server.port}
   client:
     service-url:
-      defaultZone: http://localhost:1111/eureka/
+      defaultZone: http://127.0.0.1:1111/eureka/
     #      defaultZone: http://120.26.50.186:6600/eureka/ #注册远程注册中心
