--- a/jc-cloud/pom.xml
+++ b/jc-cloud/pom.xml
@@ -9,6 +9,10 @@
         <relativePath/>
     </parent>
 
+    <properties>
+        <mapper.version>3.4.0</mapper.version>
+    </properties>
+
     <modelVersion>4.0.0</modelVersion>
 
     <modules>
@@ -162,12 +166,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!--TODO feign服务调用-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-feign</artifactId>
-        </dependency>
-
     </dependencies>
 
     <!--TODO 依赖管理，统一管理依赖包版本-->
@@ -206,7 +204,49 @@
                 <artifactId>spring-cloud-starter-zuul</artifactId>
                 <version>1.4.6.RELEASE</version>
             </dependency>
+            <!--TODO base基本包 -->
+            <dependency>
+                <groupId>com.jayce.common.util</groupId>
+                <artifactId>cloud-common</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <!--tomcat-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-tomcat</artifactId>
+                <version>2.0.5.RELEASE</version>
+            </dependency>
+            <!--ali druid-->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>1.0.28</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>1.1.0</version>
+            </dependency>
 
+            <!-- 持久层 -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-jdbc</artifactId>
+                <version>2.0.0.RELEASE</version>
+            </dependency>
+
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>5.1.10</version>
+            </dependency>
+
+            <!-- 通用mapper -->
+            <dependency>
+                <groupId>tk.mybatis</groupId>
+                <artifactId>mapper-spring-boot-starter</artifactId>
+                <version>1.1.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
