--- a/jc-cloud/jc-text/src/main/resources/application.yml
+++ b/jc-cloud/jc-text/src/main/resources/application.yml
@@ -7,6 +7,27 @@ server:
 spring:
   application:
     name: jc-text
+  datasource:
+    name: test
+    url: jdbc:mysql://127.0.0.1:3306/library?useUnicode=true&characterEncoding=UTF8&allowMultiQueries=true
+    username: root
+    password: 123456
+    # 使用druid数据源
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
+    filters: stat
+    maxActive: 20
+    initialSize: 1
+    maxWait: 60000
+    minIdle: 1
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: select 'x'
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    maxOpenPreparedStatements: 20
   http:
     encoding:
       charset: UTF-8
