--- a/jc-cloud/jc-web/pom.xml
+++ b/jc-cloud/jc-web/pom.xml
@@ -34,12 +34,13 @@
             <artifactId>feign-web</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-        <!--TODO base基本包 -->
+        <!--TODO meSdk包 -->
         <dependency>
             <groupId>com.jayce.common.util</groupId>
             <artifactId>cloud-common</artifactId>
         </dependency>
-        <!--tomcat-->
+        <!-- TODO 持久化相关包start>
+        <!-tomcat-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
@@ -63,6 +64,7 @@
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
         </dependency>
+        <!--TODO 持久化相关包end-->
     </dependencies>
 
     <build>
