--- a/jc-cloud/pom.xml
+++ b/jc-cloud/pom.xml
@@ -165,6 +165,37 @@
             <version>2.0.5.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <!--TODO meSdk包 -->
+        <dependency>
+            <groupId>com.jayce.common.util</groupId>
+            <artifactId>cloud-common</artifactId>
+        </dependency>
+        <!-- TODO 持久化相关包start>
+        <!-tomcat-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+        </dependency>
+        <!--ali druid-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
+        <!-- 持久层 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <!-- 通用mapper -->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+        </dependency>
+        <!--TODO 持久化相关包end-->
 
     </dependencies>
 
