LCN - 分布式事务

--- a/jc-cloud/jc-web/pom.xml
+++ b/jc-cloud/jc-web/pom.xml
@@ -34,6 +34,16 @@
             <artifactId>feign-web</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <!--LCN-->
+        <dependency>
+            <groupId>com.codingapi.txlcn</groupId>
+            <artifactId>txlcn-tc</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.codingapi.txlcn</groupId>
+            <artifactId>txlcn-txmsg-netty</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
