--- a/jc-cloud/txlcn-tm/src/main/resources/application.properties
+++ b/jc-cloud/txlcn-tm/src/main/resources/application.properties
@@ -11,6 +11,12 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+
+tx-lcn.logger.enabled=true
+tx-lcn.logger.driver-class-name=${spring.datasource.driver-class-name}
+tx-lcn.logger.jdbc-url=${spring.datasource.url}
+tx-lcn.logger.username=${spring.datasource.username}
+tx-lcn.logger.password=${spring.datasource.password}
 tx-lcn.manager.admin-key=123456
 
 mybatis.configuration.map-underscore-to-camel-case=true
