--- a/jc-cloud/jc-web/src/main/resources/application-dev.yml
+++ b/jc-cloud/jc-web/src/main/resources/application-dev.yml
@@ -6,6 +6,7 @@ spring:
   datasource:
     name: test
     url: jdbc:mysql://127.0.0.1:3306/library?useUnicode=true&characterEncoding=UTF8&allowMultiQueries=true
+    lcn-log-url: jdbc:mysql://127.0.0.1:3306/tx-manager?characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
     password: 123456
     # 使用druid数据源
@@ -24,3 +25,12 @@ spring:
     testOnReturn: false
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
+
+
+tx-lcn:
+  logger:
+    enabled: true
+    driver-class-name: ${spring.datasource.driver-class-name}
+    jdbc-url: ${spring.datasource.lcn-log-url}
+    username: ${spring.datasource.username}
+    password: ${spring.datasource.password}
