--- a/jc-cloud/feign-server/feign-web/src/main/resources/application.yml
+++ b/jc-cloud/feign-server/feign-web/src/main/resources/application.yml
@@ -14,9 +14,6 @@ spring:
       charset: UTF-8
       enabled: true
       force: true
-  cloud:
-    client:
-      ipAddress: 127.0.0.1
 #注册中心配置
 eureka:
   instance:
@@ -27,8 +24,10 @@ eureka:
     lease-renewal-interval-in-seconds: 1
     #定义死亡,默认90s
     lease-expiration-duration-in-seconds: 2
-    prefer-ip-address: true #以IP地址注册到服务中心
-    instance-id: ${spring.cloud.client.ipAddress}:${spring.application.name}:${server.port}
+    prefer-ip-address: false #以IP地址注册到服务中心
+    ip-address: 127.0.0.1
+    hostname: ${eureka.instance.ip-address}
+    instance-id: ${eureka.instance.ip-address}:${spring.application.name}:${server.port}
   client:
     service-url:
       defaultZone: http://localhost:1111/eureka/
