--- a/jc-cloud/jc-web/pom.xml
+++ b/jc-cloud/jc-web/pom.xml
@@ -44,6 +44,10 @@
             <groupId>com.codingapi.txlcn</groupId>
             <artifactId>txlcn-txmsg-netty</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.jayce</groupId>
+            <artifactId>me-common</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
