--- a/jc-cloud/pom.xml
+++ b/jc-cloud/pom.xml
@@ -305,7 +305,6 @@
                 <version>1.1.2</version>
             </dependency>
 
-            <!--LCN start-->
             <!--分布式事务客户端-->
             <dependency>
                 <groupId>com.codingapi.txlcn</groupId>
@@ -324,7 +323,14 @@
                 <artifactId>txlcn-txmsg-netty</artifactId>
                 <version>${codingapi.txlcn.version}</version>
             </dependency>
-            <!--LCN end-->
+
+            <!--Excel工具包-->
+            <dependency>
+                <groupId>com.jayce</groupId>
+                <artifactId>me-common</artifactId>
+                <version>2018.11.09</version>
+                <scope>compile</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
