--- a/me-exercise/pom.xml
+++ b/me-exercise/pom.xml
@@ -14,6 +14,12 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
+        <!--emq-->
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+        </dependency>
     </dependencies>
 
     <parent>
