--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,12 @@
                 <artifactId>poi</artifactId>
                 <version>3.8</version>
             </dependency>
+            <!--emq-->
+            <dependency>
+                <groupId>org.eclipse.paho</groupId>
+                <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+                <version>1.1.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
