--- a/jc-cloud/feign-server/feign-web/pom.xml
+++ b/jc-cloud/feign-server/feign-web/pom.xml
@@ -26,12 +26,12 @@
     </dependencies>
 
     <build>
-        <plugins>
+        <!--<plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-        </plugins>
+        </plugins>-->
     </build>
 
 </project>
