--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,12 @@
             <version>2.0.5.RELEASE</version>
             <scope>test</scope>
         </dependency>
-
+        <!--TODO lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.14</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
