--- a/jc-cloud/eureka-server/src/main/resources/application.yml
+++ b/jc-cloud/eureka-server/src/main/resources/application.yml
@@ -9,10 +9,17 @@ spring:
 server:
   port: 1111
 eureka:
+  server:
+    #剔除失效服务间隔
+    eviction-interval-timer-in-ms: 15000
   instance:
     hostname: localhost
     prefer-ip-address: true #以IP地址注册到服务中心，相互注册使用IP地址
     instance-id: ${spring.cloud.client.ipAddress}:${spring.application.name}:${server.port} #集群时用到
+    #Eureka客户端向服务端发送心跳的时间间隔，单位为秒（客户端告诉服务端自己会按照该规则），默认30
+    lease-renewal-interval-in-seconds: 1
+    #Eureka服务端在收到最后一次心跳之后等待的时间上限，单位为秒，超过则剔除（客户端告诉服务端按照此规则等待自己），默认90
+    lease-expiration-duration-in-seconds: 3
   client:
     register-with-eureka: false
     fetch-registry: false
