--- a/jc-cloud/feign-server/feign-web/pom.xml
+++ b/jc-cloud/feign-server/feign-web/pom.xml
@@ -7,9 +7,10 @@
         <artifactId>feign-server</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+
     <groupId>com.jayce</groupId>
     <artifactId>feign-web</artifactId>
-    <version>3.1415926</version>
+    <version>0.0.1-SNAPSHOT</version>
     <name>feign-web</name>
     <description>Demo project for Spring Boot</description>
 
@@ -22,6 +23,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId> org.aspectj</groupId >
+            <artifactId> aspectjweaver</artifactId >
+            <version> 1.8.8</version >
         </dependency>
     </dependencies>
 
