--- a/jc-cloud/jc-web/pom.xml
+++ b/jc-cloud/jc-web/pom.xml
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>com.jayce</groupId>
             <artifactId>feign-web</artifactId>
-            <version>3.1415926</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <!--LCN-->
         <dependency>
