--- a/jc-cloud/txlcn-tm/src/main/resources/application.properties
+++ b/jc-cloud/txlcn-tm/src/main/resources/application.properties
@@ -6,9 +6,9 @@
 spring.application.name=txlcn-tm
 server.port=7970
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/tx-manager?characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=@jdbc-url@
+spring.datasource.username=@jdbc-user@
+spring.datasource.password=@jdbc-password@
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
