--- a/jc-cloud/txlcn-tm/src/main/resources/application.properties
+++ b/jc-cloud/txlcn-tm/src/main/resources/application.properties
@@ -6,9 +6,9 @@
 spring.application.name=txlcn-tm
 server.port=7970
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=@jdbc-url@
-spring.datasource.username=@jdbc-user@
-spring.datasource.password=@jdbc-password@
+spring.datasource.url=${jdbc-url}
+spring.datasource.username=${jdbc-user}
+spring.datasource.password=${jdbc-password}
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
