--- a/jc-cloud/jc-gate/pom.xml
+++ b/jc-cloud/jc-gate/pom.xml
@@ -33,6 +33,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zuul</artifactId>
         </dependency>
+        <!--feign 服务-->
+        <dependency>
+            <groupId>com.jayce</groupId>
+            <artifactId>feign-web</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
