--- a/jc-cloud/jc-web/pom.xml
+++ b/jc-cloud/jc-web/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>txlcn-txmsg-netty</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId> org.aspectj</groupId >
+            <artifactId> aspectjweaver</artifactId >
+            <version> 1.8.8</version >
+        </dependency>
+
         <!--excel 导出工具-->
         <!--<dependency>
             <groupId>com.jayce</groupId>
