--- a/me-exercise/pom.xml
+++ b/me-exercise/pom.xml
@@ -30,6 +30,18 @@
             <artifactId>logback-core</artifactId>
             <version>1.3.0-alpha4</version>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.13</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.13</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <parent>
