--- a/jc-cloud/pom.xml
+++ b/jc-cloud/pom.xml
@@ -25,7 +25,7 @@
             <id>dev</id>
             <properties>
                 <profiles.env>dev</profiles.env>
-                <jdbc-url>jdbc:mysql://10.xx.xx.xx:3306/test?allowMultiQueries=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;serverTimezone=Asia/Shanghai</jdbc-url>
+                <jdbc-url>jdbc:mysql://xx.xx.xx.xx:3306/test?allowMultiQueries=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;serverTimezone=Asia/Shanghai</jdbc-url>
                 <lcn-log-url>jdbc:mysql://127.0.0.1:3306/tx-manager?allowMultiQueries=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;serverTimezone=Asia/Shanghai</lcn-log-url>
                 <jdbc-user>xx</jdbc-user>
                 <jdbc-password>xx</jdbc-password>
